// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: lambdas > explicit lambda with param annotation 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
    ],
    "term": "λx -> 1",
    "type": "Π(x: String) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda with param annotation 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "name": "String",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "id": 1205,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 26,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1207,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "id": 30,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "λx -> 1",
    "type": "Π(x: ?1) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "id": 1205,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1207,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "id": 31,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: ?4 -| Γ: x; f = f)",
      "Num ~~ ?2",
    ],
    "term": "λf => f 1",
    "type": "Π(f: ?1) => (closure: ?4 -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 30,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 1,
        "right": {
          "binder": {
            "annotation": {
              "id": 32,
              "type": "Neutral",
              "value": {
                "id": 31,
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "f",
                  },
                  "nf": {
                    "id": 29,
                    "type": "Neutral",
                    "value": {
                      "id": 28,
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "f",
                    },
                    "source",
                    {
                      "id": 27,
                      "type": "Neutral",
                      "value": {
                        "id": 26,
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "id": 1,
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "id": 1207,
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 4,
              },
            },
            "type": "Closure",
          },
          "id": 34,
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 35,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 32,
          "type": "Neutral",
          "value": {
            "id": 31,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Implicit",
        "type": "Lambda",
        "variable": "f",
      },
      "body": {
        "arg": {
          "id": 1208,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "func": {
          "id": 1205,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "icit": "Explicit",
        "id": 1209,
        "type": "App",
      },
      "id": 1210,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "f",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1211,
          "type": "Var",
          "variable": {
            "lvl": 2,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "Closure",
      },
      "id": 39,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: ?4 -| Γ: x; f = f)",
      "Num ~~ ?2",
    ],
    "term": "λf -> f 1",
    "type": "Π(f: ?1) -> (closure: ?4 -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 30,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 1,
        "right": {
          "binder": {
            "annotation": {
              "id": 32,
              "type": "Neutral",
              "value": {
                "id": 31,
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "f",
                  },
                  "nf": {
                    "id": 29,
                    "type": "Neutral",
                    "value": {
                      "id": 28,
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "f",
                    },
                    "source",
                    {
                      "id": 27,
                      "type": "Neutral",
                      "value": {
                        "id": 26,
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "id": 1,
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "id": 1207,
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 4,
              },
            },
            "type": "Closure",
          },
          "id": 34,
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 35,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 32,
          "type": "Neutral",
          "value": {
            "id": 31,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "f",
      },
      "body": {
        "arg": {
          "id": 1208,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "func": {
          "id": 1205,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "icit": "Explicit",
        "id": 1209,
        "type": "App",
      },
      "id": 1210,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "f",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1211,
          "type": "Var",
          "variable": {
            "lvl": 2,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "Closure",
      },
      "id": 39,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "λx => 1",
    "type": "Π(x: ?1) => (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Implicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "id": 1205,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1207,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "id": 31,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;
